Turning off overlays also hides edges #74199

Closed
opened 2020-02-25 16:06:23 +01:00 by Jesús Capilla López · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7
Worked: 2.81

Short description of error
Disabling the overlays while in wireframe mode hides several edges. Turning off xray mode and entering edit mode hides all edges.
While in object mode, the same edges are hidden as if the Wireframe slider in the Viewport overlays menu was 0.

Turning on the "All edges" option in the Viewport Display properties of the object fixes the hidden edges while in object mode. Entering edit mode still hides all edges.

Exact steps for others to reproduce the error
Add any slightly complex mesh to the scene, like a monkey.
Turn on wireframe mode.
MonkeyWireframe_Xray_OverlayOn.PNG
Turn off Xray mode.
MonkeyWireframe_NoXray_OverlayOn.PNG
Turn off overlays. Some edges are already missing.
MonkeyWireframe_NoXray_OverlayOff.PNG
Entering edit mode now hides all edges, leaving just the mesh outline visible.
MonkeyWireframe_NoXray_OverlayOff_EditMode.PNG

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` Worked: 2.81 **Short description of error** Disabling the overlays while in wireframe mode hides several edges. Turning off xray mode and entering edit mode hides all edges. While in object mode, the same edges are hidden as if the Wireframe slider in the Viewport overlays menu was 0. Turning on the "All edges" option in the Viewport Display properties of the object fixes the hidden edges while in object mode. Entering edit mode still hides all edges. **Exact steps for others to reproduce the error** Add any slightly complex mesh to the scene, like a monkey. Turn on wireframe mode. ![MonkeyWireframe_Xray_OverlayOn.PNG](https://archive.blender.org/developer/F8369414/MonkeyWireframe_Xray_OverlayOn.PNG) Turn off Xray mode. ![MonkeyWireframe_NoXray_OverlayOn.PNG](https://archive.blender.org/developer/F8369416/MonkeyWireframe_NoXray_OverlayOn.PNG) Turn off overlays. Some edges are already missing. ![MonkeyWireframe_NoXray_OverlayOff.PNG](https://archive.blender.org/developer/F8369418/MonkeyWireframe_NoXray_OverlayOff.PNG) Entering edit mode now hides all edges, leaving just the mesh outline visible. ![MonkeyWireframe_NoXray_OverlayOff_EditMode.PNG](https://archive.blender.org/developer/F8369421/MonkeyWireframe_NoXray_OverlayOff_EditMode.PNG)

Added subscriber: @Jecalo

Added subscriber: @Jecalo

Added subscriber: @davis095381-2

Added subscriber: @davis095381-2

Seems like a bug. Tested on Windows 8.1 with Intel graphic.

Also working in:
blender-2.80-windows64
blender-2.81-windows64
blender-2.81a-windows64
blender-2.82-367def2f1605-windows64 (Oct 2019)

broken in:
blender-2.82-windows64
blender-2.83-ddda1af97afc-windows64 (Jan 2020)

Seems like a bug. Tested on Windows 8.1 with Intel graphic. Also working in: blender-2.80-windows64 blender-2.81-windows64 blender-2.81a-windows64 blender-2.82-367def2f1605-windows64 (Oct 2019) broken in: blender-2.82-windows64 blender-2.83-ddda1af97afc-windows64 (Jan 2020)

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Richard Antalik changed title from Hidden edges in wireframe mode when overlays are turned off to Turning off overlays also hides edges 2020-02-26 13:11:27 +01:00

This issue was referenced by 156319d2b3

This issue was referenced by 156319d2b30c222728e22e361cd75b1bd68345f0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-04-17 21:54:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74199
No description provided.