Fix T74199 Overlay: Turning off overlays also hides edges