source/blender/draw/engines/overlay/overlay_engine.c
@@ -69,6 +69,7 @@ static void OVERLAY_engine_init(void *vedata)
     pd->overlay.flag = V3D_OVERLAY_HIDE_TEXT | V3D_OVERLAY_HIDE_MOTION_PATHS |
                        V3D_OVERLAY_HIDE_BONES | V3D_OVERLAY_HIDE_OBJECT_XTRAS |
                        V3D_OVERLAY_HIDE_OBJECT_ORIGINS;
+    pd->overlay.wireframe_threshold = v3d->overlay.wireframe_threshold;
   }
 
   if (v3d->shading.type == OB_WIRE) {
